# Welcome

python-name-prompt/: README.md  pyproject.toml
python-name-prompt/src/: main.py
python-name-prompt/tests/: test_main.py
