[tool.poetry]
name = "python-name-prompt"
version = "0.1.0"
description = "A simple Python project that prompts the user for their name and displays it."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"